added tree depth tracking and enabled run all

--- a/rsq1-adult.ipynb
+++ b/rsq1-adult.ipynb
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "08e50207-9969-4a34-b6ec-dcf843623d10",
    "metadata": {},
    "outputs": [],
@@ -1862,6 +1862,7 @@
     "    \n",
     "    \n",
     "    tree_sps = np.zeros((runs, len(epsilons)))\n",
+    "    tree_depths = np.zeros((runs, len(epsilons)))\n",
     "    estimated_sps = np.zeros((runs, len(epsilons)))\n",
     "    for i in range(runs):\n",
     "        ruleset = []\n",
@@ -1883,36 +1884,185 @@
     "\n",
     "        # calculate true SP\n",
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
+    "        tree_depths[i] = best_tree.tree_.max_depth\n",
     "        \n",
     "        # apply PAFER\n",
     "        for j, epsilon in enumerate(epsilons):\n",
     "            estimated_sps[i, j] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon)\n",
     "        \n",
-    "    return tree_sps, estimated_sps\n",
+    "    return tree_sps, tree_depths, estimated_sps\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d601d306-d9e6-409b-8d1a-8f3d0c4ad4d6",
+   "metadata": {},
+   "source": [
+    "## MINLEAF EXPERIMENTS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0531ec9c-80b3-4156-9fb9-968e6011362e",
+   "id": "df58372d-00f0-4203-bad6-d39071ab0df5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# script to run the experiments\n",
     "# TODO: current datastructures are not optimal or intuitive so could be helpful to streamline (for plotting)\n",
     "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(adult_train_cat_X, adult_train_sex, \"adult_train_cat_X\", adult_train_y, \n",
+    "                                         adult_test_cat_X, adult_test_sex, \"adult_test_cat_X\", adult_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "403595d7-604a-4d07-b594-79b5e11fb81c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"adult-sex-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fb39ea3-46cc-4f21-85ed-4c71c4ef5df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(adult_train_cat_X, adult_train_race, \"adult_train_cat_X\", adult_train_y, \n",
+    "                                         adult_test_cat_X, adult_test_race, \"adult_test_cat_X\", adult_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a155652-ebd6-4dc3-8892-e2b206d7dc57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"adult-race-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b155a18b-9169-4268-aa61-bde3d71a21ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(adult_train_cat_X, adult_train_sex_race, \"adult_train_cat_X\", adult_train_y, \n",
+    "                                         adult_test_cat_X, adult_test_sex_race, \"adult_test_cat_X\", adult_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1731ce75-11d9-4b5f-a452-ca3db52c242c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"adult-sex_race-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a17190-0248-4fcb-bfbf-cc22167e3534",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## CCP_ALPHA EXPERIMENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0531ec9c-80b3-4156-9fb9-968e6011362e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████| 10/10 [18:04<00:00, 108.45s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# script to run the experiments\n",
     "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
     "for ccp_alpha in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(adult_train_cat_X, adult_train_sex, \"adult_train_cat_X\", adult_train_y, \n",
+    "    t_sps, t_depths, e_sps = experiment(adult_train_cat_X, adult_train_sex, \"adult_train_cat_X\", adult_train_y, \n",
     "                                         adult_test_cat_X, adult_test_sex, \"adult_test_cat_X\", adult_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -1928,9 +2078,10 @@
    "source": [
     "tree_sps = np.array(tree_sps)\n",
     "estimated_sps = np.array(estimated_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"adult-sex-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\" \"estimated_sps\"]):\n",
+    "    with open(f\"adult-sex-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
@@ -1943,18 +2094,19 @@
    },
    "outputs": [],
    "source": [
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
     "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
     "for ccp_alpha in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(adult_train_cat_X, adult_train_race, \"adult_train_cat_X\", adult_train_y, \n",
+    "    t_sps, t_depths e_sps = experiment(adult_train_cat_X, adult_train_race, \"adult_train_cat_X\", adult_train_y, \n",
     "                                         adult_test_cat_X, adult_test_race, \"adult_test_cat_X\", adult_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -1970,9 +2122,10 @@
    "source": [
     "tree_sps = np.array(tree_sps)\n",
     "estimated_sps = np.array(estimated_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"adult-race-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"adult-race-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
@@ -1985,17 +2138,19 @@
    },
    "outputs": [],
    "source": [
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
-    "for minleaf in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(adult_train_cat_X, adult_train_sex_race, \"adult_train_cat_X\", adult_train_y, \n",
+    "for ccp_alpha in tqdm(ccp_alphas):\n",
+    "    t_sps, t_depths, e_sps = experiment(adult_train_cat_X, adult_train_sex_race, \"adult_train_cat_X\", adult_train_y, \n",
     "                                         adult_test_cat_X, adult_test_sex_race, \"adult_test_cat_X\", adult_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -2011,9 +2166,10 @@
    "source": [
     "tree_sps = np.array(tree_sps)\n",
     "estimated_sps = np.array(estimated_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"adult-sex_race-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"adult-sex_race-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
@@ -2032,18 +2188,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
-    "runs = 50\n",
+    "# minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "# runs = 50\n",
     "\n",
-    "# storage for results\n",
-    "tree_sps = []\n",
-    "estimated_sps = []\n",
-    "for minleaf in tqdm(minleafs):\n",
-    "    t_sps, e_sps = experiment(adult_train_cat_X, adult_train_race, \"adult_train_cat_X\", adult_train_y, \n",
-    "                                         adult_test_cat_X, adult_test_race, \"adult_test_cat_X\", adult_test_y, minleaf=minleaf, runs=runs)\n",
+    "# # storage for results\n",
+    "# tree_sps = []\n",
+    "# estimated_sps = []\n",
+    "# for minleaf in tqdm(minleafs):\n",
+    "#     t_sps, e_sps = experiment(adult_train_cat_X, adult_train_race, \"adult_train_cat_X\", adult_train_y, \n",
+    "#                                          adult_test_cat_X, adult_test_race, \"adult_test_cat_X\", adult_test_y, minleaf=minleaf, runs=runs)\n",
     "    \n",
-    "    tree_sps.append(t_sps)\n",
-    "    estimated_sps.append(e_sps)\n",
+    "#     tree_sps.append(t_sps)\n",
+    "#     estimated_sps.append(e_sps)\n",
     "    "
    ]
   },
@@ -2056,12 +2212,12 @@
    },
    "outputs": [],
    "source": [
-    "tree_sps = np.array(tree_sps)\n",
-    "estimated_sps = np.array(estimated_sps)\n",
+    "# tree_sps = np.array(tree_sps)\n",
+    "# estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"adult-race-{name}-prelim\", \"wb\") as f:\n",
-    "        np.save(f, arr)"
+    "# for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
+    "#     with open(f\"adult-race-{name}-prelim\", \"wb\") as f:\n",
+    "#         np.save(f, arr)"
    ]
   },
   {
@@ -2134,7 +2290,7 @@
     }
    ],
    "source": [
-    "estimated_sps"
+    "# estimated_sps"
    ]
   },
   {
