--- a/rsq1-compas.ipynb
+++ b/rsq1-compas.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bf4285ca-d954-4310-a038-00008c19bf74",
    "metadata": {
     "tags": []
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c9b396e8-36ce-439b-bb3b-8ed009db6fa3",
    "metadata": {
     "tags": []
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6609b761-9ce0-4baa-b843-018178d86e41",
    "metadata": {
     "tags": []
@@ -1005,7 +1005,7 @@
        "[6172 rows x 36 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b33edc1b-9093-4059-b422-fd7d60e99b44",
    "metadata": {
     "tags": []
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "05712f2f-0e91-48c1-b985-d6d2a3ea4395",
    "metadata": {
     "tags": []
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "09b4d259-5c3b-4735-9c9d-0a6f1a41ad4e",
    "metadata": {
     "tags": []
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "505f2212-a1d9-44b4-9cc5-49815eb5756c",
    "metadata": {
     "tags": []
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8c8d289e-0527-4240-96f2-074cfb35eace",
    "metadata": {
     "tags": []
@@ -1274,12 +1274,12 @@
     "    best_tree = tree_cv.best_estimator_\n",
     "    return best_tree\n",
     "\n",
-    "best_tree = find_best_tree(adult_train_cat_X, adult_train_y, ccp_alpha=0.2)"
+    "best_tree = find_best_tree(compas_train_cat_X, compas_train_y, ccp_alpha=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "311e2661-0593-4cda-b3d3-6ec26b5be06a",
    "metadata": {
     "tags": []
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "0aa8b8ba-acea-4432-a13e-02e0f4f38994",
    "metadata": {
     "tags": []
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "af57931f-a5db-4172-859d-42fae59a22ca",
    "metadata": {
     "tags": []
@@ -1353,13 +1353,10 @@
     {
      "data": {
       "text/plain": [
-       "[\"(compas_train_cat_X['decile_score_1']<= 0.5& compas_train_cat_X['priors_count_(7.6, 15.2]']<= 0.5& compas_train_cat_X['out_custody_2015']<= 0.5& compas_train_cat_X['in_custody_2013']> 0.5 & compas_train_cat_X['decile_score_4']<= 0.5& compas_train_cat_X['score_text_Medium']<= 0.5& compas_train_cat_X['score_text_Low']> 0.5  )\",\n",
-       " \"(compas_train_cat_X['decile_score_1']<= 0.5& compas_train_cat_X['priors_count_(7.6, 15.2]']<= 0.5& compas_train_cat_X['out_custody_2015']<= 0.5& compas_train_cat_X['in_custody_2013']> 0.5 & compas_train_cat_X['decile_score_4']<= 0.5& compas_train_cat_X['score_text_Medium']> 0.5  )\",\n",
-       " \"(compas_train_cat_X['decile_score_1']<= 0.5& compas_train_cat_X['priors_count_(7.6, 15.2]']<= 0.5& compas_train_cat_X['out_custody_2015']<= 0.5& compas_train_cat_X['in_custody_2013']> 0.5 & compas_train_cat_X['decile_score_4']> 0.5  )\",\n",
-       " \"(compas_train_cat_X['decile_score_1']> 0.5  )\"]"
+       "['()']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "87064d71-b130-4e39-8a2e-417dc8838437",
    "metadata": {
     "tags": []
@@ -1452,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "c4122c8a-e29b-425d-94d1-7ce76285a373",
    "metadata": {
     "tags": []
@@ -1483,6 +1480,7 @@
     "    \n",
     "    \n",
     "    tree_sps = np.zeros((runs, len(epsilons)))\n",
+    "    tree_depths = np.zeros((runs, len(epsilons)))\n",
     "    estimated_sps = np.zeros((runs, len(epsilons)))\n",
     "    for i in range(runs):\n",
     "        ruleset = []\n",
@@ -1504,13 +1502,152 @@
     "\n",
     "        # calculate true SP\n",
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
+    "        tree_depths[i] = best_tree.tree_.max_depth\n",
     "        \n",
     "        # apply PAFER\n",
     "        for j, epsilon in enumerate(epsilons):\n",
     "            estimated_sps[i, j] = estimate_sp(ruleset, testset, sens_testset, sorted(sens_testset.unique()), mechanism='laplacian', epsilon=epsilon)\n",
     "        \n",
-    "    return tree_sps, estimated_sps\n",
+    "    return tree_sps, tree_depths, estimated_sps\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e698ed27-fa42-42a7-92d0-2e4f865e8818",
+   "metadata": {},
+   "source": [
+    "## MINLEAF EXPERIMENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e31e60da-4040-49cf-8590-58ae33233ac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# script to run the experiments\n",
+    "# TODO: current datastructures are not optimal or intuitive so could be helpful to streamline (for plotting)\n",
+    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18205c30-d9e8-46aa-ac6c-919cce766858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-sex-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be0f9e0-7ed1-480b-82c4-23dfd3f84a02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ad234a5-5c13-4c19-839a-06fd2bfd4f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-race-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f029fbe-0ca2-4145-9f12-60dba5099fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "runs = 50\n",
+    "\n",
+    "# storage for results\n",
+    "tree_sps = []\n",
+    "tree_depths = []\n",
+    "estimated_sps = []\n",
+    "for minleaf in tqdm(minleafs):\n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y, minleaf=minleaf, runs=runs)\n",
+    "    \n",
+    "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
+    "    estimated_sps.append(e_sps)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec104873-9c08-47f5-a113-340dc71ffc8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
+    "estimated_sps = np.array(estimated_sps)\n",
+    "\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-sex_race-minleaf-{name}\", \"wb\") as f:\n",
+    "        np.save(f, arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c65ce345-a70a-41e3-a0de-debbd4f91fab",
+   "metadata": {},
+   "source": [
+    "## CCP_ALPHA EXPERIMENTS"
    ]
   },
   {
@@ -1532,18 +1669,19 @@
    "source": [
     "# script to run the experiments\n",
     "# TODO: current datastructures are not optimal or intuitive so could be helpful to streamline (for plotting)\n",
-    "minleafs = np.linspace(0.2, 0.001, 10)\n",
     "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
-    "runs = 5\n",
+    "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
     "for ccp_alpha in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_sex, \"compas_train_cat_X\", compas_train_y, \n",
     "                                         compas_test_cat_X, compas_test_sex, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -1558,10 +1696,11 @@
    "outputs": [],
    "source": [
     "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"compas-sex-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-sex-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
@@ -1602,18 +1741,19 @@
     }
    ],
    "source": [
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
     "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
     "for ccp_alpha in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_race, \"compas_train_cat_X\", compas_train_y, \n",
     "                                         compas_test_cat_X, compas_test_race, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -1628,10 +1768,11 @@
    "outputs": [],
    "source": [
     "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"compas-race-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-race-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
@@ -1644,18 +1785,19 @@
    },
    "outputs": [],
    "source": [
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
     "ccp_alphas = np.linspace(0.05, 0.001, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
     "tree_sps = []\n",
+    "tree_depths = []\n",
     "estimated_sps = []\n",
     "for ccp_alpha in tqdm(ccp_alphas):\n",
-    "    t_sps, e_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
+    "    t_sps, t_depths, e_sps = experiment(compas_train_cat_X, compas_train_sex_race, \"compas_train_cat_X\", compas_train_y, \n",
     "                                         compas_test_cat_X, compas_test_sex_race, \"compas_test_cat_X\", compas_test_y, ccp_alpha=ccp_alpha, runs=runs)\n",
     "    \n",
     "    tree_sps.append(t_sps)\n",
+    "    tree_depths.append(t_depths)\n",
     "    estimated_sps.append(e_sps)\n",
     "    "
    ]
@@ -1670,10 +1812,11 @@
    "outputs": [],
    "source": [
     "tree_sps = np.array(tree_sps)\n",
+    "tree_depths = np.array(tree_depths)\n",
     "estimated_sps = np.array(estimated_sps)\n",
     "\n",
-    "for arr, name in zip([tree_sps, estimated_sps], [\"tree_sps\", \"estimated_sps\"]):\n",
-    "    with open(f\"compas-sex_race-{name}\", \"wb\") as f:\n",
+    "for arr, name in zip([tree_sps, tree_depths, estimated_sps], [\"tree_sps\", \"tree_depths\", \"estimated_sps\"]):\n",
+    "    with open(f\"compas-sex_race-ccp-{name}\", \"wb\") as f:\n",
     "        np.save(f, arr)"
    ]
   },
