corrected depth measurement

--- a/rsq1-adult.ipynb
+++ b/rsq1-adult.ipynb
@@ -1884,7 +1884,10 @@
     "\n",
     "        # calculate true SP\n",
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
-    "        tree_depths[i] = best_tree.tree_.max_depth\n",
+    "        \n",
+    "        # every \"&\" means another split deeper\n",
+    "        tree_depths[i] = max([rule.count(\"&\") for rule in ruleset]) + 1\n",
+    "        # tree_depths[i] = best_tree.tree_.max_depth\n",
     "        \n",
     "        # apply PAFER\n",
     "        for j, epsilon in enumerate(epsilons):\n",
