--- a/rsq1-taiwan.ipynb
+++ b/rsq1-taiwan.ipynb
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "df994e20-79e9-47e1-b4f4-c091a2b9f299",
    "metadata": {
     "tags": []
@@ -907,10 +907,13 @@
     "        \n",
     "        if combined:\n",
     "            ruleset = [\" | \".join(rule for rule in ruleset)]\n",
-    "\n",
+    "            \n",
     "        # calculate true SP\n",
     "        tree_sps[i] = statistical_parity(best_tree.predict(testset), sens_testset)\n",
-    "        tree_depths[i] = best_tree.tree_.max_depth\n",
+    "        \n",
+    "        # every \"&\" means another split deeper\n",
+    "        tree_depths[i] = max([rule.count(\"&\") for rule in ruleset]) + 1\n",
+    "        # tree_depths[i] = best_tree.tree_.max_depth\n",
     "        \n",
     "        # apply PAFER\n",
     "        for j, epsilon in enumerate(epsilons):\n",
@@ -932,24 +935,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "16fc19a8-6256-4e13-b3ea-c5df3c7052b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████| 10/10 [56:04<00:00, 336.41s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# script to run the experiments\n",
     "# TODO: current datastructures are not optimal or intuitive so could be helpful to streamline (for plotting)\n",
-    "minleafs = np.linspace(0.2, 0.001, 80)\n",
+    "minleafs = np.linspace(0.1, 0.002, 80)\n",
     "runs = 50\n",
     "\n",
     "# storage for results\n",
